# mucli

./: .gitignore  CMakeLists.txt  README.md
include/: account.h  attr.h  init.h  interface.h  log.h  macro.h  mucli.h
mucli/: account.c  init.c  interface.c  log.c  macro.c  mucli.c
