CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (mucli LANGUAGES C)
SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${PROJECT_SOURCE_DIR}/CMake")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")

SET(CMAKE_THREAD_PREFER_PTHREAD ON)
SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(CURL REQUIRED)

# Source
FILE(GLOB SOURCES ${PROJECT_SOURCE_DIR}/mucli/*.c)
ADD_EXECUTABLE(mucli ${SOURCES})

# Headers
INCLUDE_DIRECTORIES(
	${CURL_INCLUDE_DIRS}
	include
)

# C options
SET(CMAKE_C_FLAGS "-g")
SET(CMAKE_C_STANDARD 99)
ADD_DEFINITIONS("-Wall -Wextra -Wno-unused-parameter -Wno-unused-value")

TARGET_LINK_LIBRARIES(mucli
	Threads::Threads
	${CURL_LIBRARIES}
)

INSTALL(TARGETS mucli
	RUNTIME DESTINATION bin)


# Pthreads

